Port MezzConfig GUI to Minecraft 1.19.2 on its own branch