@@ -27,14 +27,14 @@ public final class ConfigLocale {
 			return Locale.getDefault();
 		}
 		LanguageManager languageManager = minecraft.getLanguageManager();
-		String code = languageManager.getSelected();
+		String code = languageManager.getSelected().getCode();
 		if (cachedLocale == null || !code.equals(cachedLocaleCode)) {
 			cachedLocaleCode = code;
 			String[] splitLangCode = code.split("_", 2);
 			if (splitLangCode.length == 1) {
-				cachedLocale = Locale.of(code);
+				cachedLocale = new Locale(code);
 			} else {
-				cachedLocale = Locale.of(splitLangCode[0], splitLangCode[1]);
+				cachedLocale = new Locale(splitLangCode[0], splitLangCode[1]);
 			}
 		}
 		return cachedLocale;
